--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <div class="dropdown dropdown-end">
           <label tabindex="0" class="btn btn-ghost btn-circle avatar">
             <div class="w-10 rounded-full">
-              <img src="https://placeimg.com/80/80/people" />
+              <img
+                src="https://raw.githubusercontent.com/sohanemon/sohanemon/main/images/me.png"
+              />
             </div>
           </label>
           <ul
